fix delete hyperlink too big issue

--- a/BudgetApplication/src/main/resources/static/css/expenses-display.css
+++ b/BudgetApplication/src/main/resources/static/css/expenses-display.css
@@ -33,6 +33,17 @@
 	border-radius: 10px;
 }
 
+.budget-list-header {
+	padding-left: 10px;
+	margin-left: 40px;
+	display: grid;
+	border: 2px solid blue;
+	border-radius: 10px;
+	background-color: #8ce99a;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	margin-bottom: 10px;
+}
+
 .budget-list {
 	margin-left: 40px;
 	padding-left: 5px;
@@ -44,15 +55,13 @@
 	margin-bottom: 10px;
 }
 
-.budget-list-header {
-	padding-left: 10px;
-	margin-left: 40px;
-	display: grid;
-	border: 2px solid blue;
-	border-radius: 10px;
-	background-color: #8ce99a;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	margin-bottom: 10px;
+.delete-expense-link {
+	pointer-events: none;
+}
+
+.delete-expense-btn {
+	cursor: pointer;
+	pointer-events: auto;
 }
 
 .budget-date-filter {
